--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,19 +6,21 @@
 :root{
     --background-color: #0F0E17;
     --text-hover:#FED941; 
+    --text-input:#A7A9BE;
 }
 body{
+    width: 95%;
     background-color: var(--background-color);
 }
 
 .nav-bar{
     width: 100%;
     height: 112px;
-
     display: flex;
     flex-direction: row;
-    justify-content:space-around ;
+    justify-content:center ;
     align-items: center;
+    margin-top: 24px;
     /* border: 1px solid white; */
 
 }
@@ -44,6 +46,7 @@ a:hover{
     width: 530px;
     display: flex;
     flex-direction: row;
+    margin-left: 80px;
     /* border: 1px solid white; */
 }
 .box-search button{
@@ -51,11 +54,17 @@ a:hover{
     width: 72px;
     height: auto;
     border-radius: 0px 8px 8px 0px;
+    border:none;
+
     cursor: pointer;
 }
 .box-search input{
     width: 458px;
-    height: 44px;
+    height: 22px;
+    font-size: 1rem;
+    color: var(--text-input);
+    padding: 11px 0px 11px 12px;
     border-radius: 8px 0px 0px 8px;
+    border:none;
     outline:none;
 }
