--- a/styles/styles.css
+++ b/styles/styles.css
@@ -32,7 +32,7 @@ body{
 a{ 
     font-family: 'Inter', sans-serif;   
     margin-left: 48px;
-    font-size: 16px;
+    font-size: 1rem;
     font-weight: 700;
     color:white;
     text-decoration: none;
