--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,53 +1,67 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@700&display=swap');
-*{
-    margin: 0 ;
-    padding:0 ;
-}
+@import "https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css";
+
+
 :root{
     --background-color: #0F0E17;
     --text-hover:#FED941; 
     --text-input:#A7A9BE;
 }
-body{
-    width: 95%;
+html{
+    background-color: var(--background-color);
+
+}
+
+.navbar{
+    margin-top: 20px;
+    height: 12vh;
     background-color: var(--background-color);
 }
-
-.nav-bar{
-    width: 100%;
-    height: 112px;
-    display: flex;
-    flex-direction: row;
-    justify-content:center ;
-    align-items: center;
-    margin-top: 24px;
-    /* border: 1px solid white; */
-
-}
-.options{
-    /* border: 1px solid white; */
-
-}
-
-a{ 
+a.navbar-item{ 
     font-family: 'Inter', sans-serif;   
-    margin-left: 48px;
+    /* margin-left: 48px; */
+    
     font-size: 1rem;
     font-weight: 700;
     color:white;
     text-decoration: none;
+    /* pointer-events: none; */
 }
-a:hover{
-    color :var(--text-hover) ;
-    text-decoration-line:underline;  
+a.navbar-item:hover{
+color: var(--text-hover);
+background-color: transparent;
+text-decoration: underline;
+} 
+.button{
+    display: block;
+    width: 200px;
+    background-color: var(--text-hover);
+    border:none;
+}
+.button:hover{
+    display: block;
+    width: 200px;
+    background-color:var(--background-color);
+    color:var(--text-hover);
+    border:none;
+    border:1px solid var(--text-hover);
+}
+img[src="img/logo-blockBuster.png"]{
+    width: 150px;
+    height:auto;
+}
 
-}
+
+
+
+
+
+
 .box-search{
     width: 530px;
     display: flex;
     flex-direction: row;
     margin-left: 80px;
-    /* border: 1px solid white; */
 }
 .box-search button{
     background-color: var(--text-hover);
