--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@700&display=swap');
 @import "https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css";
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap');
 
 :root{
     --background-color: #0F0E17;
@@ -207,3 +208,78 @@ img[src="img/logo-blockBuster.png"]{
     padding: 0px 0px;
     font-size: 1.1rem;
 }
+.fas{
+    color: var(--text-hover) ;
+    font-size: 1.2rem;
+    margin: 0px 8px 0px 8px;
+    display: inline;
+    position: relative;
+    bottom: 2px;
+    
+   
+}
+.estrellita{
+    position: relative;
+    bottom: 320px;
+    width: 100px;
+    height: 50px;
+    /* display: inline-block; */
+    border: 4px solid #fed841d8;
+    border-left: none;
+    background-color: rgba(0, 0, 0, 0.7);
+    /* font-family: monse; */
+    z-index: 1;
+    padding-top: 3px;
+    border-radius: 0px 50px 50px 0px ;
+}
+
+.voto{
+    color: white;
+    font-size: 1.4rem;
+    padding: 2px;
+    /* position: relative; */
+    /* bottom: 2px; */
+    font-weight: 700;
+    font-family: 'Montserrat', sans-serif;
+}
+/* botones despues y ahora */
+.button--despues{
+text-transform: uppercase;
+background-color: var(--background-color);
+color: var(--text-hover);
+    border:1px solid var(--text-hover);
+}
+.button--despues:hover{
+    background-color: none;
+}
+.button--despues::before{
+ content: " + ";
+ font-weight: 700;
+ /* font-size: rem; */
+    margin-right: 10px;
+    font-size: 1.1em;
+    /* font-size: 30px; */
+    position: relative;
+    display: inline;
+    bottom:0px;
+}
+
+
+
+
+.button--ahora{
+    text-transform: uppercase;
+    background-color:var(--text-hover);
+    color: var(--background-color); 
+}
+.button--ahora:hover{
+   background-color:var(--text-hover);
+   color: var(--background-color);
+}
+.button--ahora::before{
+    content: " ▶ ";
+   }
+   
+
+
+
