--- a/styles/styles.css
+++ b/styles/styles.css
@@ -424,3 +424,26 @@ left:50px;
 .title-search{
 text-align: center;
 }
+.animacion{
+    position: relative;
+    left:50%;
+    top:0px;
+    width: 60px;
+    height: 60px;
+    border: 8px solid var(--text-hover);
+    border-top: 8px solid #ffffcc ;
+   border-left: 8px solid  #ffffcc ;
+    /* opacity: 0; */
+
+border-radius: 50%;
+    animation: load 1.1s infinite;
+}
+@keyframes load {
+   from{
+    transform:rotate(0deg);
+    }
+    to{
+        transform:rotate(360deg);
+
+    }
+}
